# particle-sim

./: CMakeLists.txt  README.md
docs/: interaction-rule.md  velocity-update-rule.md
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp
src/app/: app.cpp  app.h
src/camera/: camera.cpp  camera.h
src/cliutils/: cliutils.cpp  cliutils.h
src/config/: app_config.h
src/gui/: gui_manager.cpp  gui_manager.h
src/render/: render.cpp  render.h
src/simulation/: params.h  simulation.cpp  simulation.h  spatial_grid.cpp  spatial_grid.h
